Kevin Perez: Agregando cambios sobre el manejo de datos

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "7f3c103c",
    "metadata": {},
    "outputs": [
@@ -10,25 +10,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: seaborn in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (0.13.2)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (3.10.6)\n",
-      "Requirement already satisfied: openpyxl in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (3.1.5)\n",
-      "Requirement already satisfied: xlsxwriter in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (3.2.9)\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from seaborn) (2.3.3)\n",
-      "Requirement already satisfied: pandas>=1.2 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from seaborn) (2.3.3)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (1.3.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (4.60.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (1.4.9)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\danna\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (11.3.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from matplotlib) (3.2.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\danna\\appdata\\roaming\\python\\python313\\site-packages (from matplotlib) (2.9.0.post0)\n",
-      "Requirement already satisfied: et-xmlfile in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from openpyxl) (2.0.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\danna\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\danna\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.13.2)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.10.6)\n",
+      "Requirement already satisfied: openpyxl in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.1.5)\n",
+      "Requirement already satisfied: xlsxwriter in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.2.9)\n",
+      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from seaborn) (2.3.3)\n",
+      "Requirement already satisfied: pandas>=1.2 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from seaborn) (2.3.3)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (1.3.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (4.60.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (1.4.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (25.0)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (11.3.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (3.2.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openpyxl) (2.0.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\59399\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "4a1f2f33",
    "metadata": {},
    "outputs": [
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "c298c6e1",
    "metadata": {},
    "outputs": [
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "553b7262",
    "metadata": {},
    "outputs": [
@@ -286,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "a30f42a5",
    "metadata": {},
    "outputs": [
@@ -333,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "2db8656e",
    "metadata": {},
    "outputs": [
@@ -371,7 +380,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\danna\\OneDrive\\Escritorio\\SIC\\PROYECTO\\Proyecto\\sic-ecuador-2025-proyectos\\EC03\\FINZEN GESTIÓN Y MANEJO DE FINANZAS PERSONALES MEDIANTE VISUALIZACIÓN DE DATOS EN JÓVENES\\src\\Graficas.py:202: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "c:\\Users\\59399\\source\\repos\\SIC25--FINZEN-GESTI-N-Y-MANEJO-DE-FINANZAS-PERSONALES-MEDIANTE-VISUALIZACI-N-DE-DATOS-EN-J-VENES\\src\\Graficas.py:202: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  datos_agrupados = df_finanzas.groupby('grupo_edad').agg({\n"
      ]
     },
@@ -398,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "91a41a48",
    "metadata": {},
    "outputs": [
@@ -437,7 +446,7 @@
    ],
    "source": [
     "#====================================================================#\n",
-    "#             4.             Interpretación de Datos                 #\n",
+    "#         4.             Interpretación de Datos                     #\n",
     "#====================================================================#\n",
     "\n",
     "# 1️.- Edad con mayores gastos\n",
@@ -509,12 +518,14 @@
     "    elif correlacion_ahorro_dificultad < -0.2:\n",
     "        print(\"Correlación negativa moderada: quienes logran ahorrar suelen sentir menos presión económica.\")\n",
     "    else:\n",
-    "        print(\"Correlación baja o nula: el ahorro real no parece influir directamente en la dificultad percibida.\")"
+    "        print(\"Correlación baja o nula: el ahorro real no parece influir directamente en la dificultad percibida.\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0bb1f412",
    "metadata": {},
    "outputs": [
@@ -522,20 +533,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archivo guardado: c:\\Users\\danna\\OneDrive\\Escritorio\\SIC\\PROYECTO\\Proyecto\\sic-ecuador-2025-proyectos\\EC03\\FINZEN GESTIÓN Y MANEJO DE FINANZAS PERSONALES MEDIANTE VISUALIZACIÓN DE DATOS EN JÓVENES\\out\\csv\\finanzas.csv  (24 filas)\n",
-      "Archivo guardado: c:\\Users\\danna\\OneDrive\\Escritorio\\SIC\\PROYECTO\\Proyecto\\sic-ecuador-2025-proyectos\\EC03\\FINZEN GESTIÓN Y MANEJO DE FINANZAS PERSONALES MEDIANTE VISUALIZACIÓN DE DATOS EN JÓVENES\\out\\csv\\estadisticas.csv  (39 filas)\n",
-      "Archivo guardado: c:\\Users\\danna\\OneDrive\\Escritorio\\SIC\\PROYECTO\\Proyecto\\sic-ecuador-2025-proyectos\\EC03\\FINZEN GESTIÓN Y MANEJO DE FINANZAS PERSONALES MEDIANTE VISUALIZACIÓN DE DATOS EN JÓVENES\\out\\csv\\equilibrio.csv  (24 filas)\n",
-      "Archivo guardado: c:\\Users\\danna\\OneDrive\\Escritorio\\SIC\\PROYECTO\\Proyecto\\sic-ecuador-2025-proyectos\\EC03\\FINZEN GESTIÓN Y MANEJO DE FINANZAS PERSONALES MEDIANTE VISUALIZACIÓN DE DATOS EN JÓVENES\\out\\csv\\tipo_ingreso.csv  (39 filas)\n",
-      "Excel guardado en: c:\\Users\\danna\\OneDrive\\Escritorio\\SIC\\PROYECTO\\Proyecto\\sic-ecuador-2025-proyectos\\EC03\\FINZEN GESTIÓN Y MANEJO DE FINANZAS PERSONALES MEDIANTE VISUALIZACIÓN DE DATOS EN JÓVENES\\out\\analisis_finzen.xlsx\n"
+      "Archivo guardado: c:\\Users\\59399\\source\\repos\\SIC25--FINZEN-GESTI-N-Y-MANEJO-DE-FINANZAS-PERSONALES-MEDIANTE-VISUALIZACI-N-DE-DATOS-EN-J-VENES\\out\\csv\\finanzas.csv  (24 filas)\n",
+      "Archivo guardado: c:\\Users\\59399\\source\\repos\\SIC25--FINZEN-GESTI-N-Y-MANEJO-DE-FINANZAS-PERSONALES-MEDIANTE-VISUALIZACI-N-DE-DATOS-EN-J-VENES\\out\\csv\\estadisticas.csv  (39 filas)\n",
+      "Archivo guardado: c:\\Users\\59399\\source\\repos\\SIC25--FINZEN-GESTI-N-Y-MANEJO-DE-FINANZAS-PERSONALES-MEDIANTE-VISUALIZACI-N-DE-DATOS-EN-J-VENES\\out\\csv\\equilibrio.csv  (24 filas)\n",
+      "Archivo guardado: c:\\Users\\59399\\source\\repos\\SIC25--FINZEN-GESTI-N-Y-MANEJO-DE-FINANZAS-PERSONALES-MEDIANTE-VISUALIZACI-N-DE-DATOS-EN-J-VENES\\out\\csv\\tipo_ingreso.csv  (39 filas)\n",
+      "Excel guardado en: c:\\Users\\59399\\source\\repos\\SIC25--FINZEN-GESTI-N-Y-MANEJO-DE-FINANZAS-PERSONALES-MEDIANTE-VISUALIZACI-N-DE-DATOS-EN-J-VENES\\out\\analisis_finzen.xlsx\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\danna\\\\OneDrive\\\\Escritorio\\\\SIC\\\\PROYECTO\\\\Proyecto\\\\sic-ecuador-2025-proyectos\\\\EC03\\\\FINZEN GESTIÓN Y MANEJO DE FINANZAS PERSONALES MEDIANTE VISUALIZACIÓN DE DATOS EN JÓVENES\\\\out\\\\analisis_finzen.xlsx'"
+       "'c:\\\\Users\\\\59399\\\\source\\\\repos\\\\SIC25--FINZEN-GESTI-N-Y-MANEJO-DE-FINANZAS-PERSONALES-MEDIANTE-VISUALIZACI-N-DE-DATOS-EN-J-VENES\\\\out\\\\analisis_finzen.xlsx'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
